[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-request"
version = "1.6.3"
dependencies = [
    "Django>=4.2",
    "python-dateutil",
]
description = "django-request is a statistics module for django. It stores requests in a database for admins to see, it can also be used to get statistics on who is online etc."
readme = "README.rst"
requires-python = ">= 3.8"
authors = [
    {name = "Kyle Fuller", email = "kyle@fuller.li"},
]
maintainers = [
    {name = "Mariusz Felisiak", email = "felisiak.mariusz@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://django-request.readthedocs.io/en/latest/"
Documentation = "https://django-request.readthedocs.io/en/latest/"
Repository = "https://github.com/django-request/django-request.git"
Issues = "https://github.com/django-request/django-request/issues"
Changelog = "https://github.com/django-request/django-request/blob/master/CHANGELOG.md"

[tool.black]
target-version = ['py312']

[isort]
skip = [".tox", "build"]
profile = "black"
