[metadata]
name = django-request
version = attr: request.__version__
url = attr: request.__URL__
download_url = https://pypi.org/project/django-request/
author = Kyle Fuller
author_email = kyle@fuller.li
maintainer = Mariusz Felisiak
maintainer_email = felisiak.mariusz@gmail.com
description = file: docs/description.txt
long_description = file: docs/long_description.txt
license = attr: request.__licence__
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    Django>=1.11
    python-dateutil
    six
packages =
    request
    request.migrations
    request.templatetags
    request.management
    request.management.commands

[options.package_data]
request =
    templates/admin/request/*.html
    templates/admin/request/request/*.html
    templates/request/plugins/*.html
    static/request/js/*.js
    locale/*/LC_MESSAGES/*.*

[flake8]
exclude = .git,.tox,build,./request/migrations
max-line-length = 119

[isort]
skip = migrations,.tox,build
line_length = 119
