[metadata]
name = django-request
version = 1.6.1
url = https://django-request.readthedocs.io/en/latest/
download_url = https://pypi.org/project/django-request/
author = Kyle Fuller
author_email = kyle@fuller.li
maintainer = Mariusz Felisiak
maintainer_email = felisiak.mariusz@gmail.com
description = django-request is a statistics module for django. It stores requests in a database for admins to see, it can also be used to get statistics on who is online etc.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    Django>=2.2
    python-dateutil
packages =
    request
    request.migrations
    request.templatetags
    request.management
    request.management.commands

[options.package_data]
request =
    templates/admin/request/*.html
    templates/admin/request/request/*.html
    templates/request/plugins/*.html
    static/request/js/*.js
    locale/*/LC_MESSAGES/*.*

[flake8]
exclude = .git,.tox,build,./request/migrations
max-line-length = 119

[isort]
skip = migrations,.tox,build
line_length = 119
